# research-scripts

./: .gitignore  README.md  all_data.csv  batch1.json  batch1.json1000_ulid.json  batch1.json2000_ulid.json  batch1.json3000_ulid.json  batch1.json4000_ulid.json  batch1.json4500_ulid.json  batch1.json5000_ulid.json  concat.py  dwnld.py  main.py  pyproject.toml  search.py  split_audio.py  transcript.py
transcripts/: 01K53N21RTB63A86ERQDYSSVQM.json  01K53N22GYB66KN9PPZNMYET82.json  01K53N236W8FGD5EFF60TMHBBB.json  01K53N23ZSNVB7KAMA7W7YJ7JN.json  01K53N25XS9QH0ZVH2HSSDJPJM.json  01K53N29PE0GV3YCKV29H0E8VW.json  01K53N2BQ8AHCT8KMP0CG3SJB8.json  01K53N2CRDVMXKQXQ2P4NQ862B.json  01K53N2EEREPWYJG60CWNG081P.json  01K53N2FC3HW1X4B2JQ2Z8SVVP.json  01K53N2GD2HSJAH9M1MSPHZ4B4.json  01K53N2HADCWQHCQV62THSXE48.json  01K53N2J8APZ3D2XGQRF92JKG9.json  01K53N2KVBHAPXCN5FTVEXFAW8.json  01K53N2MQMCEPDKCEMCGMFG6K9.json  01K53N2NQ36M87JFZ25FVHMD38.json  01K53N2QCBD16VJT7Q830J60VT.json  01K53N2R5S6Q6H5JTY21J56D76.json  01K53N2S12RAQ9DGSWKPW4KBCZ.json  01K53N2TRZ557Y8PD9P0T9E8PQ.json  01K53N2YGMHVZHXB8XSAHYFYPE.json  01K53N2Z9H4EFTFSFM8NJ8JTTK.json  01K53N306G7D4G8K05J7CBAPSD.json  01K53N31P53M4PZN3YX5HDAE3G.json  01K53N32VRDAEDHPBSAEJHTXNV.json  01K53N33S7JR93HVRACX4264FG.json  01K53N369FTXSYQ53W84YQTQHV.json  01K53N370J2E596KYPHRWJHZYB.json  01K53N386JSCJPM17TCPK0K4WY.json  01K53N39HBN1K1VJ13G4ZVAA31.json  01K53N3AD6FNVK18VYMZK839NS.json  01K53N3BETW0AMCYPX52FDHV0R.json  01K53N3ESRNCER952QYB1SJPZQ.json  01K53N3FJXC9BYN76ZG1XFM2EF.json  01K53N3H6B43JQWJYDD671BWAG.json  (+247 more)
